[gd_scene load_steps=3 format=3 uid="uid://brv13kol3tw58"]

[ext_resource type="FontFile" uid="uid://crhi0qga1xu5q" path="res://graphics/font/kenvector_future.ttf" id="1_0481g"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_sh3l2"]

[node name="UI" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_sh3l2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 21.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayTimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0481g")
theme_override_font_sizes/font_size = 30
text = "Play Time: 0 seconds "
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MeteorsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0481g")
theme_override_font_sizes/font_size = 30
text = "Meteors Destroyed: 0"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0481g")
theme_override_font_sizes/font_size = 30
text = "Score: 0"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 201.0
grow_vertical = 0
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
